<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2016 Alec Rietman
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">Literary Tracker</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_lightnovel_list">LightNovels</string>
    <string name="title_lightnovel_detail">LightNovel Detail</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="completed">Completed?</string>
    <string name="description">Synopsis</string>
    <string name="translatorSite">Translated by</string>
    <string name="edit_translator_site">Edit translator sites</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">confirm</string>
    <string name="edit_genres">Edit Genres</string>
    <string name="new_genre_message">Enter a new genre</string>
    <string name="new_translator_message">Enter a new translator</string>
    <string name="new_genre_title">New Genre</string>
    <string name="new_translator_title">New Translator</string>
</resources>
